--- a/templates/header.html
+++ b/templates/header.html
@@ -94,6 +94,15 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
       </li>
+      {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      {% else %}
+         <li class="nav-item">
+          <a class="nav-link" href="/account/login">Login</a>
+        </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
