--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,10 +7,10 @@
 {% block content %}
    <br/><br/><br/><br/><br/><br/>
    <div class="container">
-     <div class="w-100 container-fluid">
-        <div class="w-100 border rounded-circle p-3 profile-icon text-center">
-          <i class="text-center fa fa-user"></i>
-        </div>
+     <div class="text-center">
+       <i style="font-size:100px" class="fa fa-user-circle"></i>
+       <h4>Welcome, {{user.username}}<h4>
+        <button class="btn btn-primary rounded d-grid">upload image</button>
      </div>
    </div>
 {% endblock %}
