--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
 {% block content %}
 <br/><br/><br/><br/><br/><br/><br/>
 <div class="container">
-  <h2 class="text-center">Login</h2>
+  <h2 class="text-center">Sign Up</h2>
   <form method="post" class='container-fluid'>
     {% csrf_token %}
     <div class="form-group">
@@ -15,11 +15,18 @@
       <input type="text" class="form-control" id="username" placeholder="Enter username" name="username">
     </div>
     <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" placeholder="Enter Email" name="email">
+    </div>
+    <div class="form-group">
       <label for="password">Password:</label>
       <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
     </div>
+    <div class="text-danger">
+      <p>{{error}}</p>
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button><br/><br/>
-    <p>Don't have coustomer account? <a href="/signup">Sign Up</a></p>
+    <p>Already have coustomer account? <a href="/account/login">login</a></p>
   </form>
 </div>
 {% endblock %}
