--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,145 @@
-{% extends "header.html" %}
-
-{% block title %}
-  Login 
-{% endblock %}
-
-{% block content %}
-<br/><br/><br/><br/><br/><br/><br/>
-<div class="container">
-  <h2 class="text-center">Login</h2>
-  <form method="post" class='container-fluid'>
-    {% csrf_token %}
-    <div class="form-group">
-      <label for="username">Username:</label>
-      <input type="text" class="form-control" id="username" placeholder="Enter username" name="username">
+<!DOCTYPE html>
+<html lang="en">
+  {% load static %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-image: url("{% static 'download2.jfif' %}");
+            background-repeat: no-repeat;
+            color: white;
+            font-family: Arial, sans-serif;
+            flex-direction: column;
+            background-size: cover;
+        }
+        .login-container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
+            width: 300px;
+            box-shadow: 3px 0 5px rgba(255, 255, 255, 0.2);
+        }
+        .input-group {
+            position: relative;
+            margin: 20px 0;
+        }
+        .input-group input {
+            width: 100%;
+            padding: 10px;
+            background: transparent;
+            border: 1px solid white;
+            outline: none;
+            color: white;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+        .input-group label {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            transition: 0.3s;
+            color: rgba(255, 255, 255, 0.7);
+        }
+        .input-group input:focus + label,
+        .input-group input:not(:placeholder-shown) + label {
+            top: -10px;
+            left: 5px;
+            font-size: 12px;
+            color: white;
+        }
+        .login-btn {
+            width: 100%;
+            padding: 10px;
+            background: #ff4500;
+            border: none;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            position: relative;
+            transition: 0.3s;
+        }
+        .login-btn:disabled {
+            background: grey;
+            cursor: not-allowed;
+        }
+        .remember-forgot {
+            display: flex;
+            justify-content: space-between;
+            font-size: 14px;
+            margin-top: 10px;
+        }
+        .remember-forgot a {
+            color: #ff4500;
+            text-decoration: none;
+        }
+        .remember-forgot a:hover {
+            text-decoration: underline;
+        }
+        .terms {
+            margin-top: 15px;
+            font-size: 12px;
+            text-align: center;
+            color: rgba(255, 255, 255, 0.7);
+        }
+        .signup-link {
+            margin-top: 15px;
+            font-size: 14px;
+            text-align: center;
+        }
+        .signup-link a {
+            color: #ff4500;
+            text-decoration: none;
+        }
+        .signup-link a:hover {
+            text-decoration: underline;
+        }
+        .footer {
+            margin-top: 20px;
+            font-size: 12px;
+            text-align: center;
+            color: rgba(255, 255, 255, 0.5);
+        }
+    </style>
+</head>
+<body>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form id="loginForm" method="post">
+          {% csrf_token %}
+            <div class="input-group">
+                <input type="text" id="username" required placeholder=" " name="username">
+                <label for="username">Username</label>
+            </div>
+            <div class="input-group">
+                <input name="password" type="password" id="password" required placeholder=" ">
+                <label for="password">Password</label>
+            </div>
+            <div class="remember-forgot">
+                <label><input type="checkbox" name="remember"> Remember me</label>
+                <a href="/accounts/password/reset/">Forgot Password?</a>
+            </div>
+            <button type="submit" class="login-btn" id="loginBtn">
+                Login
+            </button>
+        </form>
+        <div class="terms">
+            By logging in, you agree to our <a href="/terms">Terms and Conditions</a>.
+        </div>
+        <div class="signup-link">
+            Don't have an account? <a href="/signup">Sign up</a>
+        </div>
     </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
+    <div class="footer">
+        &copy; 2020 eCommerce. All rights reserved.
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button><br/><br/>
-    <p>Don't have coustomer account? <a href="/signup">Sign Up</a></p>
-  </form>
-</div>
-{% endblock %}
+</body>
+</html>
